samples/_failures_safe/1761486770_1d0168_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ed11c37.c: In function ‘main’:
./samples/SAFE/__tmp_5ed11c37.c:160: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_5ed11c37.c:159:5: error: expected declaration or statement at end of input
  159 |     if
      |     ^~
